deployment_frontapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapp
  labels:
    app: frontapp
    training: block3
    homework: frontapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontapp
      training: block3
      homework: frontapp
  template:
    metadata:
      labels:
        app: frontapp
        training: block3
        homework: frontapp
    spec:
      containers:
      - name: attilaszegedihw
        image: quay.io/drsylent/cubix/block3/homework-frontapp:springboot3
        ports:
        - containerPort: 8090
