service_backapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: backapp
  labels:
    app: backapp
    training: block3
    homework: backapp
spec:
  selector:
      app: backapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
