ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw3asz
  labels:
    app: frontapp
    training: block3
spec:
  rules:
  - http:
      paths:
      - path: /frontapp
        pathType: Exact
        backend: 
          service:
            name: frontapp
            port:
              number: 8080
